Added header, moved page numbering.

--- a/00_abstract/abstract.tex
+++ b/00_abstract/abstract.tex
@@ -1,1 +1,1 @@
-This thesis discusses the development of a system that allows its user to observe \& move around their real world environment whilst wearing equipment that allows them to alternatively view an immersive virtual reality environment from the equivalent vantage point. This style of interaction with complete real \& virtual environments is presented as a new category of alternate reality, called parallel reality. The position of parallel reality is established in relation to previously explored alternate realities \& analysis \& discussion of results from preliminary user studies of the system are presented.
+This thesis discusses the development of a system that allows its user to observe and move around their real world environment whilst wearing equipment that allows them to alternatively view an immersive virtual reality environment from the equivalent vantage point. This style of interaction with complete real and virtual environments is presented as a new category of alternate reality, called parallel reality. The position of parallel reality is established in relation to previously explored alternate realities and analysis and discussion of results from preliminary user studies of the system are presented.
