--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -1,7 +1,7 @@
 \begin{quote}
 	\textit{``The major challenge for the future will be effectively and cheaply to shift the sense of presence from one's own body to another, without replacing or excluding the physical world in which we all exist.''}
 \end{quote}
-\hfill \textit{Waterworth \& Waterworth}~\cite{Waterworth2014}
+\hfill \textit{Waterworth and Waterworth}~\cite{Waterworth2014}
 \\
 \\
 %=========================================================================================================
@@ -11,9 +11,9 @@
 
 %=========================================================================================================
 
-A tourist steps into a 15th century chapel. Although the chapel is in remarkable condition for a building that is over 500 years old (it is even still in active use!) it looks markedly different today than it did when it was first built, back in 1450. The tourist dons a head-mounted display, which via a pair of front mounted cameras allows her to still see where she is going as she starts to explore the chapel. Once in the centre of the building, she stops walking \& presses a button on a controller she holds in her hand. Her view of the chapel around her disappears \& is replaced with a virtual reconstruction of the chapel as it stood over 500 years ago. The view changes appropriately as she turns her head, allowing her to look all around her at how chapel used to be. She releases the button \& is returned to the present day \& continues walking through the chapel until she reaches the altar. She presses the button again \& once again her view switches to that of the virtual chapel, which has moved to match her new position at the altar, allowing her to inspect its 1450 counterpart.
+A tourist steps into a 15th century chapel. Although the chapel is in remarkable condition for a building that is over 500 years old (it is even still in active use!) it looks markedly different today than it did when it was first built, back in 1450. The tourist dons a head-mounted display, which via a pair of front mounted cameras allows her to still see where she is going as she starts to explore the chapel. Once in the centre of the building, she stops walking and presses a button on a controller that she holds in her hand. Her view of the chapel around her disappears and is replaced with an immersive virtual reconstruction of the chapel as it stood over 500 years ago. The view changes appropriately as she turns her head, allowing her to look all around her at how the chapel used to be. She releases the button and is returned to the present day and continues walking through the chapel until she reaches the altar. She presses the button again and once again her view switches to that of the virtual chapel, which has moved to match her new position at the altar, allowing her to inspect its 1450 counterpart.
 
-This is not an augmented reality system which superimposes virtual objects upon the real world. This is a \textbf{parallel reality} system that allows its user to switch between seeing the real world \& a complete, immersive virtual environment, allowing access to a level of tandem virtuality unprecedented of augmentations.
+This is not an augmented reality system which superimposes virtual objects upon the real world. This is a \textbf{parallel reality} system that allows its user to switch between seeing the real world and the equivalent vantage in a complete, immersive virtual environment, allowing access to a level of tandem virtuality unprecedented of augmentations.
 
 \afterpage{
 \begin{figure}[h]
@@ -35,35 +35,35 @@ The central theme of this thesis is the concept of `parallel reality', a new cat
 
 \vspace{7mm}
 
-\textbf{Parallel Reality:} A system comprising two environments, one real \& the other virtual, each complete unto itself \& wherein the user may freely switch between them.
+\textbf{Parallel Reality:} A system comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them.
 
 \vspace{7mm}
 
 %=====================
 
-The concept of alternate realities has become a mainstay both of science fiction \& of serious academic research, with the concept of other worlds \& how we can visit them or bring them into our `real' world keeping authors \& scientists alike fascinated for many decades. The concept of these `virtual worlds' dates back far into human history, long before mankind's invention of the transistor \& the computers that harnessed it;
+The concept of alternate realities has become a mainstay both of science fiction and of serious academic research, with the concept of other worlds and how we can visit them or bring them into our real world keeping authors and scientists alike fascinated for many decades. The concept of these `virtual worlds' dates back far into human history, long before mankind's invention of the transistor and the computers that harnessed it;
 
 \begin{quote}
 	\textit{``Virtual worlds, or as we will now more broadly define them, immersive experiences delivered through the human imagination, have their origins in deep prehistory. Whether these varieties of nonphysical, dreamlike realities were communicated by our ancestors through the imitation of animals, the incarnation of spirits, the painting of scenes on the stone canvasses of caves, the holding of ceremonial rites in temples, or the elaboration of the human story through the fount of theater, humans have craved and crafted virtual-world experiences from the dawn of artistic and linguistic expression.''}~\cite{Damer2014}
 \end{quote}
 
-Within this thesis we are concerned with those alternate realities that through means of computers modify, mediate or create the environmental stimuli that reach a subject's senses. While some alternate reality endeavours have explored the mediation of multiple human senses, from Morton Heilig's 1950's `Sensorama' experience that presented its occupant with a motorcyle ride through combination of film, sound, wind, vibration \& odor~\cite{Rheingold1992}, to present day experiences that combine multiple computer generated sensory data such as the Birdly full body flight simulator\footnote{\url{http://birdly.zhdk.ch/}}, many are focussed upon visual stimuli alone;
+Within this thesis we are concerned with those alternate realities that through means of computers modify, mediate or create the environmental stimuli that reach a subject's senses. While some alternate reality endeavours have explored the mediation of multiple human senses, from Morton Heilig's 1950's `Sensorama' experience that presented its occupant with a motorcyle ride through combination of film, sound, wind, vibration and odor~\cite{Rheingold1992}, to present day experiences that combine multiple computer generated sensory data such as the Birdly full body flight simulator\footnote{\url{http://birdly.zhdk.ch/}}, many are focussed upon visual stimuli alone;
 
 \begin{quote}
 	\textit{``Sight plays such a prominent part in the mental life that the field of vision is sometimes considered almost synonymous with the field of attention.''}~\cite{Lucas1951}
 \end{quote}
 
-The 1990s saw a surge of interest around \textit{virtual reality}, promising via head mounted displays to immerse users via sight into 3D virtual environments. However with hardware \& software simply not advanced enough to meet the news \& media generated hype, the virtual reality bubble burst \& was largely ignored as a consumer platform for gaming \& media consumption.
+The 1990s saw a surge of interest around \textit{virtual reality}, promising via head mounted displays to immerse users via sight into 3D virtual environments. However with hardware and software simply not advanced enough to meet the news and media generated hype, the virtual reality bubble burst and was largely ignored as a consumer platform for gaming and media consumption.
 
-The advent \& mass adoption of the smartphone beginning in the early 2000s, with its combination of location sensing (GPS) \& orientation sensing (accelerometer \& gyroscope) capabilities in a portable package with a screen \& camera, led to a surge of \textit{augmented reality} applications, which overlaid virtual objects \& data upon the view of the real world captured by the phone's camera.
+The advent and mass adoption of the smartphone beginning in the early 2000s, with its combination of location sensing (GPS) and orientation sensing (accelerometer and gyroscope) capabilities in a portable package with a screen and camera, led to a surge of \textit{augmented reality} applications, which overlaid virtual objects and data upon the view of the real world captured by the phone's camera.
 
-The early 2000s also saw the rise of a next generation of multi-user virtual environments, self proclaimed as `virtual worlds', with a focus on 3D3C (3D, Community, Creation \& Commerce)~\cite{Sevan2008}, including Second Life from Linden Lab \& its open source implementation OpenSim. The scientific research potential of these virtual worlds~\cite{Bainbridge2007} led to numerous projects that explored their utility for subjects as diverse as education~\cite{Allison2012}, virtual heritage~\cite{Kennedy2013}, building automation systems\footnote{\url{http://www.ugotrade.com/2007/07/02/eolus-makes-leap-to-3d-internet-on-second-life/}}, data centre visualisation\footnote{\url{http://www-03.ibm.com/press/us/en/pressrelease/23565.wss}} \& standards design~\cite{Gelissen2011a}, amongst others.
+The early 2000s also saw the rise of a next generation of multi-user virtual environments, self proclaimed as `virtual worlds', with a focus on 3D3C (3D, Community, Creation and Commerce)~\cite{Sevan2008}, including Second Life from Linden Lab and its open source implementation OpenSim. The scientific research potential of these virtual worlds~\cite{Bainbridge2007} led to numerous projects that explored their utility for subjects as diverse as education~\cite{Allison2012}, virtual heritage~\cite{Kennedy2013}, building automation systems\footnote{\url{http://www.ugotrade.com/2007/07/02/eolus-makes-leap-to-3d-internet-on-second-life/}}, data centre visualisation\footnote{\url{http://www-03.ibm.com/press/us/en/pressrelease/23565.wss}} and standards design~\cite{Gelissen2011a}, amongst others.
 
-One such project, led by Joshua Lifton at MIT's Media Lab, introduced \textit{cross reality} as a new category of alternate reality in which the real world \& a virtual environment (in this case, Second Life) are connected by sensor \& actuator infrastructure, allowing bidirectional exchange of media \& control information between the two environments, such that actions \& events in one can manifest in the other~\cite{Lifton2007a}. This endeavour aimed to mitigate what Lifton identified as the \textit{vacancy problem}, which described how a person interacting with a virtual environment becomes unaware of their real environment \& vice versa, by virtue of not having \textit{``the means to be in more than one place (reality) at a time''}.
+One such project, led by Joshua Lifton at MIT's Media Lab, introduced \textit{cross reality} as a new category of alternate reality in which the real world and a virtual environment (in this case, Second Life) are connected by sensor and actuator infrastructure, allowing bidirectional exchange of media and control information between the two environments, such that actions and events in one can manifest in the other~\cite{Lifton2007a}. This endeavour aimed to mitigate what Lifton identified as the \textit{vacancy problem}, which described how a person interacting with a virtual environment becomes unaware of their real environment and vice versa, by virtue of not having \textit{``the means to be in more than one place (reality) at a time''}.
 
-The vacancy problem is an important consideration for the future, as we move rapidly into a world where the ubiquity of technology, wireless communications \& the explosive popularity of social networking heralds the coming of an era in which maintaining a virtual presence (whether 3D or on Facebook) while continuing to function in the real world becomes not just desirable, but the norm, creating instances of PolySocial Reality~\cite{Applin2012} (see also the opening quote to this chapter) wherever we go.
+The vacancy problem remains an important consideration, as we move rapidly into a world where the ubiquity of technology, wireless communications and the explosive popularity of social networking heralds the coming of an era in which maintaining a virtual presence (whether 3D or on Facebook) while continuing to function in the real world becomes not just desirable, but the norm, creating instances of PolySocial Reality~\cite{Applin2012} (see also the opening quote to this chapter) wherever we go.
 
-It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real \& a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they are, gives rise to parallel reality. With the recent resurgence of interest in head mounted display based virtual reality, thanks largely to the introduction by Oculus of their Rift developer kits, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas, the Mirrorshades parallel reality platform was developed \& evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors \& actuators, parallel reality gives them the ability to switch between directly visually each environment - to at one moment view their real surroundings \& at the next to view the equivalent vantage in the parallel virtual environment.
+It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they are, gives rise to parallel reality. With the recent resurgence of interest in head mounted display based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the Mirrorshades parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and the next the equivalent vantage in the parallel virtual environment.
 
 %=========================================================================================================
 
@@ -72,19 +72,19 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 The contributions of this thesis can be summarized as follows;
 
 \begin{itemize}
-	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience two complete environments in tandem \& represents an approach for mitigation of the vacancy problem.
-	\item The framing of parallel reality through a thorough investigation \& extension of previous taxonomies that classify \& distinguish alternate reality terminologies.
+	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience two complete environments in tandem and represents an avenue for further mitigation of the vacancy problem.
+	\item The framing of parallel reality through a thorough investigation and extension of previous taxonomies that classify and distinguish between alternate reality terminologies.
 	\item The creation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Development of a parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
-	\item Discussion \& creation of a set of best practices for future parallel reality endeavours.
+	\item Discussion and creation of a set of best practices for future parallel reality endeavours.
 \end{itemize}
 
 %=========================================================================================================
 
 \section{Document Overview}
 
-Chapter \ref{chapter-background} surveys existing taxonomies \& methods for classifying, categorising \& distinguishing between different alternate reality techniques, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades parallel reality platform. Chapters \ref{chapter-eval-1} \& \ref{chapter-eval-2} cover the evaluation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against more traditional manners in which virtual reality are used at such sites \& the latter investigating the benefits \& drawbacks to manners of parallel reality implementation, presenting a set of best practice recommendations. Finally \ref{chapter-conclusions} concludes the body of work \& postulates on future avenues of parallel reality investigation.
+Chapter \ref{chapter-background} surveys existing methods and taxonomies for classifying, categorising and distinguishing between different alternate reality techniques, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the evaluation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has been used at such sites and the latter investigating the benefits and drawbacks to different manners of parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further parallel reality investigation.
 
 %=========================================================================================================
 
@@ -119,9 +119,9 @@ Chapter \ref{chapter-background} surveys existing taxonomies \& methods for clas
 
 
 
-%From William Gibson's `The Gernsback Continuum' \& beyond through contemporary cyberpunk literature
+%From William Gibson's `The Gernsback Continuum' and beyond through contemporary cyberpunk literature
 
-%``the reality games of Philip K Dick''~\cite{Sterling1988} \& the almost constant virtual overlays of the real world described in Vernor Vinge's Rainbows End~\cite{Vinge2006}
+%``the reality games of Philip K Dick''~\cite{Sterling1988} and the almost constant virtual overlays of the real world described in Vernor Vinge's Rainbows End~\cite{Vinge2006}
 
 
 
@@ -146,7 +146,7 @@ Chapter \ref{chapter-background} surveys existing taxonomies \& methods for clas
 
 
 %can sound alone give us an alternate reality?
-%Caroline A. James speaking on the work of Janet Cardiff \& George Bures Miller
+%Caroline A. James speaking on the work of Janet Cardiff and George Bures Miller
 %\textit{``Cardiff brings segmentation into the present, crafting `sound walks' that layer an alternate reality over the fl\^aneur's perambulations - a fantastic elaboration of the kind of personal soundscape chosen by the iPod user.''}
 
 %=========================================================================================================
