--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -40,16 +40,13 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 
 \section{Future Work}
 
-Parallel reality has been presented in this thesis as a new category of alternate reality with the Mirrorshades platform representing the first involved effort at assembling a system within this new categorisation.
+The introduction of parallel reality in this thesis along with the investigation of its first serious implementation in Mirrorshades is only the beginning of en extended course of study that will be required to fully understand \& come to appreciate the benefits that the concept can offer. The following highlights a few choice avenues in which the investigation into parallel reality would be well to pursue, but should be no means be considered an exhaustive list of possibly improvements \& extensions.
 
-%Hardware
-Regarding the hardware of the Mirrorshades platform gives rise to an obvious avenue for improvement. Rather than encumbering a user with a bulky, heavy satchel containing a laptop computer, battery pack and myriad wires, and occupying both of their hands with a smartphone and controller, a hardware platform such as Samsung's Gear VR, which unfortunately did not exist in time for inclusion in this thesis, would have a drastic effect upon the comfort of the system and the ability to quickly and easily deploy it in less pre-rehearsed experimental settings.
+Probably most noticeable is the matter of hardware. The parallel reality platform presented by this thesis, Mirrorshades, is a somewhat cumbersome package of HMD, laptop, battery pack, smartphone, games console controller \& myriad cables, occupying both of the users hands \& requiring them to carry a satchel of not insubstantial size \& weight. To posit that this cumbersome nature of the platform had a directly detrimental effect upon the quality of experience received by the participants is no stretch of the imagination \& improvements in this regard will be required for parallel reality to see deployment \& use in anything but controlled laboratory or user study conditions. As discussed in section \ref{mobile-client} we are already beginning to see the advent of hardware platforms that would present a much improved basis for parallel reality experiences. A platform such as Samsung Gear VR, once appropriately modified with the requisite stereo video see-through provision, would represent a fully contained single unit parallel reality experience, suitable for handing to a user in the same manner that audio guides are given out at many of the world's museums. Furthermore, improvements to the performance of the platform, in terms of the visual acuity of both real \& virtual content, as well as the accuracy of the positioning \& registration, will present beneficial results both to casual users \& to experts wishing to use such a modality of interaction for serious work.
 
-%Domain/Evaluation
-Evaluation of this platform was centred upon an application within the domain of cultural heritage, however parallel reality as a concept can surely be applied to many other areas to great benefit, both serious and not so serious.
+Investigating the application of parallel reality to other domains represents possibly the largest avenue of potential further extension. While the user studies discussed in this thesis experimentally showed the worth of parallel reality when applied to cultural heritage, parallel reality as a concept could be applied to many fields. Postulating for but a moment, one can imagine how parallel reality could be applied to architecture \& visualisation of renovations, using the physical layout of an environment as a canvas for novel artistic expression, to the study of PolySocial interactions involving real \& VR parties \& new styles of gaming that merge both real \& virtual play fields. As society becomes more familiar with \& more dependent upon almost constant connection to the virtual, whether in the form of 2D Web based social networks \& apps or richer multimedia experiences, the utility of platforms that allow real \& virtual environments to be cycled between in a trivial manner will likely present many exciting opportunities.
 
-%Vacancy/PoSR
-PoSR
+
 
 %=========================================================================================================
 
